# marseer-trendbased-content-generator

./: README.md  main.py  main_prod_scrape.py  pyproject.toml  requirements.py  scratch.py  trends.json
agents/: content_writer.py  product_intelligence.py  trend_analyzer.py  trend_based_article_generator.py
configs/: agents.yaml  model.yaml  tools.yaml
db/: chroma.sqlite3
llms/: LLM.py
tasks/: tasks.py
tools/: brand_brief_generator_tool.py  browser_tool.py  content_generator_tool.py  product_analyzer_tool.py  product_mapping_tool.py  search_tools.py  serper_dev_tool.py  trend_listener_tool.py
utils/: configs.py  generate_product_data.py  helpers.py  load_api.py
